--- a/preamble.tex
+++ b/preamble.tex
@@ -15,8 +15,8 @@
 %	PACKAGES AND THEMES
 %----------------------------------------------------------------------------------------
 
-\documentclass[UTF8,aspectratio=169,12pt]{ctexbeamer}
-
+%\documentclass[UTF8,aspectratio=169,14pt]{ctexbeamer}
+\documentclass[UTF8,aspectratio=169]{ctexbeamer}
 \usepackage{hyperref}
 \hypersetup{
 	colorlinks=true,
@@ -106,3 +106,6 @@
 % \usepackage{libertine}
 % \setmonofont{Courier}
 \setCJKsansfont[ItalicFont=Noto Serif CJK SC Black, BoldFont=Noto Sans CJK SC Black]{Noto Sans CJK SC}
+\setmainfont[Ligatures={Common,TeX}]{Linux  Libertine O}
+\setmonofont[SmallCapsFont={Latin Modern Mono Caps}]{Latin Modern Mono Light}
+\setsansfont{Linux Biolinum O}
