--- a/lec1/slide-01-01.tex
+++ b/lec1/slide-01-01.tex
@@ -4,8 +4,8 @@
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
 
-\title[第1讲]{第1讲 ：高级操作系统概述} % The short title appears at the bottom of every slide, the full title is only on the title page
-\subtitle{第一节：课程概述}
+\title[第1讲]{第1讲 ：Advanced OS Overview} % The short title appears at the bottom of every slide, the full title is only on the title page
+\subtitle{第一节：Course Overview }
 \author{陈渝} % Your name
 \institute[清华大学] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
 {
