--- a/lec1/slide-01-03.tex
+++ b/lec1/slide-01-03.tex
@@ -4,8 +4,8 @@
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
 
-\title[第1讲]{第1讲 ：高级操作系统概述} % The short title appears at the bottom of every slide, the full title is only on the title page
-\subtitle{第二节：课程安排}
+\title[第1讲]{第1讲 ：Advanced OS Overview} % The short title appears at the bottom of every slide, the full title is only on the title page
+\subtitle{第三节：Rethink OS Components}
 \author{陈渝} % Your name
 \institute[清华大学] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
 {
@@ -66,7 +66,7 @@ History of OS: Change!
 	\frametitle{Changing Roles of the OS}
 	
 	\begin{itemize}\Large
-		\item What OS does depends on
+		\item OS depends on
 		\begin{itemize}\large
 			\item available hardware and software
 			\item changing uses of machines
