--- a/lec1/slide-01-06.tex
+++ b/lec1/slide-01-06.tex
@@ -203,5 +203,24 @@
      
 	
 \end{frame}
+
+%----------------------------------------------
+\begin{frame}[plain]	
+	\frametitle{Thanks}
+	
+	\LARGE
+	Some materials are from:
+	\begin{itemize}\Large
+
+		\item cop5611 course from Andy Wang, Florida State University
+		\item CS-502 course from WPI
+		\item Compiler/Program Research Group in TH
+		\item OS papers/slides on our course topics
+		\item ......
+
+	\end{itemize}
+	
+	
+\end{frame}
 %----------------------------------------------
 \end{document}
