--- a/preamble.tex
+++ b/preamble.tex
@@ -109,3 +109,5 @@
 \setmainfont[Ligatures={Common,TeX}]{Linux  Libertine O}
 \setmonofont[SmallCapsFont={Latin Modern Mono Caps}]{Latin Modern Mono Light}
 \setsansfont{Linux Biolinum O}
+
+\logo{\includegraphics[width=0.55cm,height=0.55cm]{../../thcs-logo.png}}
