update side-test for logo

--- a/lec1/slide-test.tex
+++ b/lec1/slide-test.tex
@@ -1,8 +1,8 @@
 \input{../preamble}
-\def\imagepath{./resources/graphics}
-\usepackage[imagepath=\imagepath]{ditaa}
-\graphicspath{ {\imagepath/} }
-%----------------------------------------------------------------------------------------
+%\def\imagepath{./resources/graphics}
+%\usepackage[imagepath=\imagepath]{ditaa}
+%\graphicspath{ {\imagepath/} }
+%%----------------------------------------------------------------------------------------
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
 
