--- a/lec1/slide-01-01.tex
+++ b/lec1/slide-01-01.tex
@@ -35,43 +35,46 @@
 %\section{第一节：课程概述} % Sections can be created in order to organize your presentation into discrete blocks, all sections and subsections are automatically printed in the table of contents as an overview of the talk
 %%------------------------------------------------
 %-------------------------------------------------
-\begin{frame}[t]
+\begin{frame}[plain,t]
 	\frametitle{课程信息}
 	\begin{itemize}
 		\item Instructor：陈渝	 
-		\item Research areas: OS
+		\item Research area: OS
 	\end{itemize}	
 	\includegraphics[width=0.2\linewidth]{chenyu}
 
  	\begin{itemize}
-		\item Course Representatives:王润基、贾越凯、戴臻旸
+ 		\item TA: ...
+		\item Course Representatives:王润基、贾越凯、戴臻旸、王逸松...
 	\end{itemize}
 
 
 \end{frame}
 %-------------------------------------------------
-\begin{frame}
+\begin{frame}[plain]
 
 \frametitle{预备知识}
 
 \begin{itemize}
 
-\item 程序设计语言（汇编、C和Rust）
-\item 数据结构和算法
-\item 计算机组成原理 编译原理 操作系统
+\item 程序设计语言（汇编、C/C++、Go、Rust）
+\item 数据结构和算法 \pause
+\item 编译原理/操作系统 
+\item 计算机组成原理/计算机体系结构 \pause
+
 \item English
 \end{itemize}
 
 \end{frame}
 %-------------------------------------------------
-\begin{frame}
+\begin{frame}[plain]
 
 \frametitle{Why Study OS?}
 
 \begin{itemize}
 	
-	\item The Operating System (OS) I use has already been written, and I doubt it will be my job to write another one. For example, Windows, Linux.
-	\item Haven't OS developers figured everything out already? What more is there to do?
+	\item The Operating System (OS) I use has already been written, and I doubt it will be my job to write another one. For example, Windows, Linux. \pause
+	\item Haven't OS developers figured everything out already? What more is there to do? \pause
 	\item Why should I study this as a graduate student?
 
 \end{itemize}
@@ -88,10 +91,12 @@
 	\begin{itemize}\large 
 		\item Know how to read/write papers/reports
 		\item Know current OS hot topics
-		\item Develop and test OS projects
+		\item Develop OS projects \pause
+		\item Help other CS researches
 	\end{itemize}
 \end{itemize}
-	
+	\centering
+	\includegraphics[width=0.45\linewidth]{system-for-ai}
 \end{frame}
 
 %-------------------------------------------------
@@ -102,14 +107,16 @@
 		\item Lecture notes/papers (14 research domains)
 		
 		\begin{itemize}\large 
-			\item  \href{https://github.com/chyyuu/aos_course/blob/master/readinglist.md}{ReadingList of OS}
-			\item OS Arch,  Process/Thread/Scheduling
-			\item Memory Management, Concurrency/Sync/Mutex
-			\item Distributed Systems, Virtual Machine Monitor
-			\item Network, File System, Scalability
-			\item Bugs/Security/Fault-Tolerant/Recovery
-			\item Encryption Authentication
-			\item Interface Design, Verification/Proof, DEVICES
+			\item  \href{https://github.com/chyyuu/aos\_course/blob/master/readinglist.md}{ReadingList of OS}
+			\begin{itemize}\large 
+				\item OS Arch,  Process/Thread/Scheduling
+				\item Memory Management, Concurrency/Sync/Mutex
+				\item Distributed Systems, Virtual Machine Monitor
+				\item Network, File System, Scalability
+				\item Bugs/Security/Fault-Tolerant/Recovery
+				\item Encryption Authentication
+				\item Interface Design, Verification/Proof, DEVICES
+			\end{itemize}
 		\end{itemize}
 	\end{itemize}
 	
