--- a/lec1/slide-01-02.tex
+++ b/lec1/slide-01-02.tex
@@ -68,20 +68,21 @@ Scheduling
 	\frametitle{Reading Grading}
 	
 	\begin{itemize}\Large
-		\item 4 Papers Summaries and critiques 60%
+		\item 4 Papers Summaries and critiques 60\%
 		\begin{itemize}\large
 			\item In 12 weeks
-			\item include report doc(4+ or 4000 words inA4 pages) presentation (15+
-			pages)
+			\item Include report docs(4+ or 4000 words in A4 pages) 
+			\item Include slides (15+	pages)
 			\item Research Areas (14 research domains)
 			\begin{itemize}	\large
 				\item OS/VMM Architectures
 				\item Performance/Multicore
 				\item Security/Find Bug
-				\item Correctness/Verification,etc.
+				\item Correctness/Verification
+				\item system related......
 			\end{itemize}		
-			\item The best papers are from famous system-related conferences
-			\item \href{https://github.com/chyyuu/aos_course/blob/master/readinglist.md}{ReadingList of OS}			
+			\item The best papers from famous system-related conferences/journals
+			\item \href{https://github.com/chyyuu/aos\_course/blob/master/readinglist.md}{ReadingList of OS}			
 		\end{itemize}
 	\end{itemize}
 	
@@ -95,7 +96,7 @@ Scheduling
 	
 	\begin{itemize}\Large
 		\item Need to address the following:
-		\begin{itemize}\large
+		\begin{itemize}[<+->]\Large
 			
 			\item Summary of major innovations
 			\item What the problems the paper mentioned?
@@ -104,8 +105,8 @@ Scheduling
 			\item How to test/compare/analyze the results?
 			\item How can the research be improved?
 			\item If you write this paper, then how would you do?
-			\item What’s your test Results about the paper?
-			\item Give the survey paper list in the same area.
+			\item What's your test results about the paper?
+			\item Give the survey paper list in the same research area
 			
 		\end{itemize}
 	\end{itemize}
@@ -118,20 +119,20 @@ Scheduling
 	\frametitle{Project Grading}
 	
 	\begin{itemize}\Large
-		\item One Project		40%
+		\item One Project		40\%
 		\begin{itemize}\large
 			\item Didn't finish rcore/ucore/xv6/jos labs
 			\begin{itemize}\large
-				\item Analyze/Testing/Improving ucore OS
+				\item Analyze/Testing/Improving ucore/rcore OS
 				\item https://github.com/chyyuu/os\_tutorial\_lab
 				\item https://github.com/chyyuu/ucore\_os\_lab
 				
-			\end{itemize}
+			\end{itemize}\pause
 			\item Already finished ucore/xv6/jos labs
 			\begin{itemize}\large
 				\item \href{https://github.com/chyyuu/aos_course/blob/master/readinglist.md}{ReadingList of OS}
 				\item find a interesting research topic/project
-				\item analysis/practice deeply
+				\item deep analysis/practice
 			\end{itemize}
 		\end{itemize}
 	\end{itemize}
@@ -144,7 +145,7 @@ Scheduling
 	\frametitle{Project Proposal}
 	
 	\begin{itemize}\Large
-		\item Due on the 2nd week
+		\item Due on the $ 2^{nd} $ week
 		\item 2-page written proposal
 		\begin{itemize}\large
 			\item team members (<=3)
@@ -170,13 +171,13 @@ Scheduling
 		\item 10-15 minutes Presentation
 		\item Midterm
 		\begin{itemize}\large
-			\item 3~10 page written paper/report
+			\item 3-10 pages paper/report
 			\item demo
 			
 		\end{itemize}
 		\item Final
 		\begin{itemize}\large
-			\item 5~15 page written paper/ project report
+			\item 5-15 pages paper/ project report
 			\item demo
 			
 		\end{itemize}	
