--- a/lec1/slide-01-03.tex
+++ b/lec1/slide-01-03.tex
@@ -63,18 +63,20 @@ History of OS: Change!
 
 %----------------------------------------------
 \begin{frame}[plain]	
-	\frametitle{Changing Roles of the OS}
+	\frametitle{Roles of the OS}
 	
 	\begin{itemize}\Large
 		\item OS depends on
-		\begin{itemize}\large
+		\begin{itemize}\Large
 			\item available hardware and software
 			\item changing uses of machines
 			\item changing expectations of users
 			
 		\end{itemize}
-	\end{itemize}
 	
+	\end{itemize}
+	\centering
+	\includegraphics[width=0.5\linewidth]{os-position}
 	
 \end{frame}
 
@@ -90,7 +92,7 @@ History of OS: Change!
 			\item Synchronization
 			\item File systems and device support
 			
-		\end{itemize}
+		\end{itemize}\pause
 		\item Security
 		\item Correctness
 		\item Distributed System
@@ -101,7 +103,7 @@ History of OS: Change!
 
 
 %----------------------------------------------
-\begin{frame}[t]
+\begin{frame}[plain,t]
 	\frametitle{Single-Machine OS/VMM}
 	\begin{columns}[t]
 		\begin{column}{.5\textwidth}
@@ -121,7 +123,7 @@ History of OS: Change!
 				\end{itemize}
 			\end{itemize}
 			
-		\end{column}
+		\end{column}\pause
 		
 		\begin{column}{.5\textwidth}
 			
@@ -145,8 +147,8 @@ History of OS: Change!
 
 
 %----------------------------------------------
-\begin{frame}[t]
-	\frametitle{Memory Management}
+\begin{frame}[plain,t]
+	\frametitle{Single-Machine: Memory Management}
 	\begin{columns}[t]
 		\begin{column}{.5\textwidth}
 			
@@ -167,7 +169,7 @@ History of OS: Change!
 				\end{itemize}
 			\end{itemize}
 			
-		\end{column}
+		\end{column}\pause
 		
 		\begin{column}{.5\textwidth}
 			
@@ -190,8 +192,8 @@ History of OS: Change!
 \end{frame}
 
 %----------------------------------------------
-\begin{frame}[t]
-	\frametitle{Process Scheduling}
+\begin{frame}[plain,t]
+	\frametitle{Single-Machine: Process Scheduling}
 	\begin{columns}[t]
 		\begin{column}{.5\textwidth}
 			
@@ -212,7 +214,7 @@ History of OS: Change!
 				\end{itemize}
 			\end{itemize}
 			
-		\end{column}
+		\end{column}\pause
 		
 		\begin{column}{.5\textwidth}
 			
@@ -234,8 +236,8 @@ History of OS: Change!
 \end{frame}
 
 %----------------------------------------------
-\begin{frame}[t]
-	\frametitle{Synchronization }
+\begin{frame}[plain,t]
+	\frametitle{Single-Machine: Synchronization }
 	\begin{columns}[t]
 		\begin{column}{.5\textwidth}
 			
@@ -252,7 +254,7 @@ History of OS: Change!
 				\end{itemize}
 			\end{itemize}
 			
-		\end{column}
+		\end{column}\pause
 		
 		\begin{column}{.5\textwidth}
 			
@@ -275,8 +277,8 @@ History of OS: Change!
 \end{frame}
 
 %----------------------------------------------
-\begin{frame}[t]
-	\frametitle{File Systems}
+\begin{frame}[plain,t]
+	\frametitle{Single-Machine: File Systems}
 	\begin{columns}[t]
 		\begin{column}{.5\textwidth}
 			
@@ -296,7 +298,7 @@ History of OS: Change!
 				\end{itemize}
 			\end{itemize}
 			
-		\end{column}
+		\end{column}\pause
 		
 		\begin{column}{.5\textwidth}
 			
@@ -321,8 +323,8 @@ History of OS: Change!
 
 
 %----------------------------------------------
-\begin{frame}[t]
-	\frametitle{I/O Device }
+\begin{frame}[plain,t]
+	\frametitle{Single-Machine: I/O Device }
 	\begin{columns}[t]
 		\begin{column}{.5\textwidth}
 			
@@ -339,7 +341,7 @@ History of OS: Change!
 				\end{itemize}
 			\end{itemize}
 			
-		\end{column}
+		\end{column}\pause
 		
 		\begin{column}{.5\textwidth}
 			
