--- a/lec1/slide-01-04.tex
+++ b/lec1/slide-01-04.tex
@@ -35,7 +35,7 @@
 %\section{第一节：课程概述} % Sections can be created in order to organize your presentation into discrete blocks, all sections and subsections are automatically printed in the table of contents as an overview of the talk
 %%------------------------------------------------
 %-------------------------------------------------
-\begin{frame}
+\begin{frame}[plain]
 	\frametitle{Tendency}
 
 	\begin{itemize}\huge
@@ -71,7 +71,7 @@
 
 
 %----------------------------------------------
-\begin{frame}
+\begin{frame}[plain]
 	\frametitle{ }
 	\begin{columns}
 		\begin{column}{.5\textwidth}
@@ -96,7 +96,7 @@
 \end{frame}
 
 %----------------------------------------------
-\begin{frame}
+\begin{frame}[plain]
 	\frametitle{ }
 	\begin{columns}
 		\begin{column}{.3\textwidth}
@@ -121,7 +121,7 @@
 \end{frame}
 
 %----------------------------------------------
-\begin{frame}
+\begin{frame}[plain]
 	\frametitle{ }
 	\begin{columns}[t]
 		\begin{column}{.3\textwidth}
