--- a/lec1/slide-test.tex
+++ b/lec1/slide-test.tex
@@ -2,6 +2,10 @@
 %\def\imagepath{./resources/graphics}
 %\usepackage[imagepath=\imagepath]{ditaa}
 %\graphicspath{ {\imagepath/} }
+
+
+%\usepackage{pgfpages}
+%\setbeameroption{show notes on second screen}
 %%----------------------------------------------------------------------------------------
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
